<?xml version="1.0"?>
<package>
  <name>dyros_jet</name>
  <version>0.1.0</version>
  <description>The dyros_jet meta package</description>

  <maintainer email="psh117@snu.ac.kr">Suhan Park</maintainer>

  <license>BSD</license>

  <author email="psh117@snu.ac.kr">Suhan Park</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>dyros_jet_controller</run_depend>
  <run_depend>dyros_jet_msgs</run_depend>

  <export>
   <metapackage />
  </export>
</package>
