<?xml version="1.0"?>
<package>
  <name>dyros_jet_dynamixel_x_interface</name>
  <version>0.0.0</version>
  <description>The dyros_jet_dynamixel_x_interface package</description>

  <maintainer email="psh117@snu.ac.kr">Suhan Park</maintainer>

  <license>BSD</license>


  <!-- <url type="website">http://wiki.ros.org/dyros_jet_controller</url> -->


  <author email="psh117@snu.ac.kr">Suhan Park</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>realtime_tools</build_depend>
  <run_depend>realtime_tools</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <run_depend>dynamixel_sdk</run_depend>

  <build_depend>dyros_jet_msgs</build_depend>
  <run_depend>dyros_jet_msgs</run_depend>


  <export>
  </export>
</package>
