<?xml version="1.0"?>
<package>
  <name>dyros_jet_msgs</name>
  <version>0.0.0</version>
  <description>The dyros_jet_msgs package</description>

  <maintainer email="psh117@snu.ac.kr">Suhan Park</maintainer>

  <license>BSD</license>

  <author email="psh117@snu.ac.kr">Suhan Park</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <export>
  </export>
</package>
